<resources>
    <string name="app_name">Mugr</string>
    <string name="post_activity_name">New Post</string>
    <string name="detail_activity_name">Detail</string>
    <string name="post_hint">What do you want to post?</string>
    <string name="title_hint">Title</string>
    <string name="loadingPlaceholder">loading…</string>
    <string name="create_new_post">Post</string>
    <string name="delete">Delete</string>
    <string name="empty_title_or_content">Title or content of thread cannot be empty!</string>
    <string name="send_post">send</string>
    <string name="login_username">StudentID</string>
    <string name="login_password">Password</string>
    <string name="login_activity_name">Login</string>
    <string name="login">login</string>
    <string name="login_notice">If you don\'t have an account, you will be signed up automatically!</string>
    <string name="profile_activity_name">Me</string>
    <string name="logout">logout</string>
    <string name="do_your_profile_page_here">DO YOUR PROFILE PAGE HERE</string>
    <string name="comment">Comment here</string>
    <string name="commentButton">Post Comment</string>
    <string name="comments">Comments</string>
    <string name="empty_comment">Comment cannot be empty!</string>
    <string name="study_buddy_preferences">Study Buddy Preferences</string>
    <string name="education_level">What level of education are you at?</string>
    <string name="gender_preference">Do you have a gender preference for your study buddy?</string>
    <string name="study_time_preference">Do you prefer studying in early morning or at night?</string>
    <string name="learning_style_preference">What is your learning style?</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="Tertiary">Tertiary</string>
    <string name="University">University</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="nil">Nil</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>
    <string name="visual">Visual</string>
    <string name="auditory">Auditory</string>
    <string name="reading">Reading</string>
    <string name="kinesthetic">Kinesthetic</string>
    <string name="comment_placeholder">Nothing is here…</string>
    <string name="matching_activity_name">Preferences</string>
    <string name="match_activity_name">Matches</string>
    <string name="telegram">What is your Telegram username?</string>
    <string name="hint_telegram">telegram username</string>
</resources>