<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/threadTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailToolbar"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/loadingPlaceholder"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/threadUserIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/threadTitleText"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/loadingPlaceholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="12sp" />

    <ScrollView
        android:id="@+id/threadContentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/threadUserIDText"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/LLayout">

            <TextView
                android:id="@+id/threadContentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loadingPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="14sp" />

            <ImageView
                android:paddingTop="10dp"
                android:id="@+id/pstImg"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingTop="10dp"
                android:text="@string/comments"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp" />





        </LinearLayout>
    </ScrollView>


    <EditText
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/commentButton"
        android:gravity="start"
        android:hint="@string/comment"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="send" />


</RelativeLayout>